--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -34,6 +34,11 @@
   <% } %>
   <%- css('css/style') %> -->
 
+  <%- css("assets/2017/style.css") %>
+  <%- js(["assets/packed/app.js","assets/packed/vendor.js"]) %>
+
+
+
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <link href='./assets/favicon.png' rel='shortcut icon'>
