--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,641 +1,31 @@
 
-<%- partial('_partial/head') %>
-<nav class="top-nav" data-js-no-preview role="navigation">
-  <div class="container">
-    <div class="left">
-      <a class="home back-button" href="."></a>
-    </div>
 
-    <a class="brand" href=".">
-      Devhints.io
-    </a>
-
-    <div class="actions">
-      <ul class="social-list social page-actions">
-        <li class="facebook link hint--bottom" data-hint="Share on Facebook">
-          <a
-            href="https://www.facebook.com/sharer/sharer.php?u=http://0.0.0.0:4001/"
-            target="share"
-            ><span class="text"></span
-          ></a>
-        </li>
-        <li class="twitter link hint--bottom" data-hint="Share on Twitter">
-          <a
-            href="https://twitter.com/intent/tweet?text=Ridiculous%20collection%20of%20web%20development%20cheatsheets%20http://0.0.0.0:4001/"
-            target="share"
-            ><span class="text"></span
-          ></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="body-area -slim">
-  <div class="site-header" role="banner">
-    <h1>
-      Rico's cheatsheets
-    </h1>
-    <p>
-      Hey! I'm <a href="https://ricostacruz.com">@rstacruz</a> and this is a
-      modest collection of cheatsheets I've written.
-    </p>
-
-    <form data-js-search-form class="search" action="." method="get">
-      <label class="search-box ">
-        <span class="prefix">devhints.io</span>
-        <span class="sep">/</span>
-        <input
-          name="q"
-          type="text"
-          autofocus
-          data-js-search-input
-          placeholder="Search..."
-        />
-      </label>
-    </form>
-
-    <div class="adbox" role="complementary">
-      <aside class="codefund-sponsor" data-js-no-preview>
-        <div id="codefund">
-          <!-- fallback content -->
-        </div>
-        <script
-          src="https://codefund.app/properties/51/funder.js"
-          async="async"
-        ></script>
-        <script type="text/javascript">
-          var abp;
-        </script>
-        <script
-          type="text/javascript"
-          src="https://cdn2.codefund.app/assets/px.js?ch=1"
-        ></script>
-        <script
-          type="text/javascript"
-          src="https://cdn2.codefund.app/assets/px.js?ch=2"
-        ></script>
-      </aside>
-    </div>
-  </div>
-
-  <div class="pages-list" role="main">
-    <h2 class="category item" data-js-searchable-header>
-      <span>Recently updated</span>
-    </h2>
-
-    <a
-      class="article item -item-fitness/phat"
-      href="./fitness/phat"
-      data-js-searchable-item='{"slug":"fitness/phat","category":"Fitness"}'
-    >
-      <span class="info">
-        <code class="slug">fitness/phat</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">Phat </span>
-      </span>
-    </a>
-
-    <h2 class="category item" id="analytics" data-js-searchable-header>
-      <span>Analytics</span>
-    </h2>
-
-    <h2 class="category item" id="ansible" data-js-searchable-header>
-      <span>Ansible</span>
-    </h2>
-
-    <h2 class="category item" id="apps" data-js-searchable-header>
-      <span>Apps</span>
-    </h2>
-
-    <h2 class="category item" id="c-like" data-js-searchable-header>
-      <span>C-like</span>
-    </h2>
-
-    <h2 class="category item" id="cli" data-js-searchable-header>
-      <span>CLI</span>
-    </h2>
-
-    <h2 class="category item" id="css" data-js-searchable-header>
-      <span>CSS</span>
-    </h2>
-
-    <h2 class="category item" id="databases" data-js-searchable-header>
-      <span>Databases</span>
-    </h2>
-
-    <h2 class="category item" id="devops" data-js-searchable-header>
-      <span>Devops</span>
-    </h2>
-
-    <h2 class="category item" id="elixir" data-js-searchable-header>
-      <span>Elixir</span>
-    </h2>
-
-    <h2 class="category item" id="git" data-js-searchable-header>
-      <span>Git</span>
-    </h2>
-
-    <h2 class="category item" id="html" data-js-searchable-header>
-      <span>HTML</span>
-    </h2>
-
-    <h2 class="category item" id="java-&-jvm" data-js-searchable-header>
-      <span>Java & JVM</span>
-    </h2>
-
-    <h2 class="category item" id="javascript" data-js-searchable-header>
-      <span>JavaScript</span>
-    </h2>
-
-    <h2
-      class="category item"
-      id="javascript-libraries"
-      data-js-searchable-header
-    >
-      <span>JavaScript libraries</span>
-    </h2>
-
-    <a
-      class="article item -item-deprecated/bower-api"
-      href="./deprecated/bower-api"
-      data-js-searchable-item='{"slug":"deprecated/bower-api","category":"JavaScript libraries"}'
-    >
-      <span class="info">
-        <code class="slug">deprecated/bower-api</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">Bower API </span>
-      </span>
-    </a>
-
-    <h2 class="category item" id="jekyll" data-js-searchable-header>
-      <span>Jekyll</span>
-    </h2>
-
-    <h2 class="category item" id="ledger" data-js-searchable-header>
-      <span>Ledger</span>
-    </h2>
-
-    <h2 class="category item" id="markup" data-js-searchable-header>
-      <span>Markup</span>
-    </h2>
-
-    <h2 class="category item" id="macos" data-js-searchable-header>
-      <span>macOS</span>
-    </h2>
-
-    <h2 class="category item" id="node.js" data-js-searchable-header>
-      <span>Node.js</span>
-    </h2>
-
-    <h2 class="category item" id="php" data-js-searchable-header>
-      <span>PHP</span>
-    </h2>
-
-    <a
-      class="article item -item-wip/php"
-      href="./wip/php"
-      data-js-searchable-item='{"slug":"wip/php","category":"PHP"}'
-    >
-      <span class="info">
-        <code class="slug">wip/php</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">PHP </span>
-      </span>
-    </a>
-
-    <h2 class="category item" id="python" data-js-searchable-header>
-      <span>Python</span>
-    </h2>
-
-    <h2 class="category item" id="rails" data-js-searchable-header>
-      <span>Rails</span>
-    </h2>
-
-    <h2 class="category item" id="react" data-js-searchable-header>
-      <span>React</span>
-    </h2>
-
-    <h2 class="category item" id="ruby" data-js-searchable-header>
-      <span>Ruby</span>
-    </h2>
-
-    <a
-      class="article item -item-ruby"
-      href="./ruby"
-      data-js-searchable-item='{"slug":"ruby","category":"Ruby"}'
-    >
-      <span class="info">
-        <code class="slug">ruby</code>
-
-        <span class="title">Ruby </span>
-      </span>
-    </a>
-
-    <a
-      class="article item -item-ruby21"
-      href="./ruby21"
-      data-js-searchable-item='{"slug":"ruby21","category":"Ruby"}'
-    >
-      <span class="info">
-        <code class="slug">ruby21</code>
-
-        <span class="title">Ruby 2.1 </span>
-      </span>
-    </a>
-
-    <a
-      class="article item -item-rubygems"
-      href="./rubygems"
-      data-js-searchable-item='{"slug":"rubygems","category":"Ruby"}'
-    >
-      <span class="info">
-        <code class="slug">rubygems</code>
-
-        <span class="title">Rubygems </span>
-      </span>
-    </a>
-
-    <h2 class="category item" id="ruby-libraries" data-js-searchable-header>
-      <span>Ruby libraries</span>
-    </h2>
-
-    <h2 class="category item" id="vim" data-js-searchable-header>
-      <span>Vim</span>
-    </h2>
-
-    <h2 class="category item" id="fitness" data-js-searchable-header>
-      <span>Fitness</span>
-    </h2>
-
-    <a
-      class="article item -item-fitness/general"
-      href="./fitness/general"
-      data-js-searchable-item='{"slug":"fitness/general","category":"Fitness"}'
-    >
-      <span class="info">
-        <code class="slug">fitness/general</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">General fitness notes </span>
-      </span>
-    </a>
-
-    <a
-      class="article item -item-fitness/micronutrients"
-      href="./fitness/micronutrients"
-      data-js-searchable-item='{"slug":"fitness/micronutrients","category":"Fitness"}'
-    >
-      <span class="info">
-        <code class="slug">fitness/micronutrients</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">Essential micronutrients </span>
-      </span>
-    </a>
-
-    <a
-      class="article item -item-fitness/phat"
-      href="./fitness/phat"
-      data-js-searchable-item='{"slug":"fitness/phat","category":"Fitness"}'
-    >
-      <span class="info">
-        <code class="slug">fitness/phat</code>
-
-        <abbr
-          class="attribute-peg -new-layout hint--bottom"
-          data-hint="New layout!"
-          ><span></span
-        ></abbr>
-
-        <span class="title">Phat </span>
-      </span>
-    </a>
-
-    <h2 class="category item" id="others" data-js-searchable-header>
-      <span>Others</span>
-    </h2>
-
-    <div class="message item missing-message">
-      <h3>See something missing?</h3>
+<div class='body-area -slim'>
+    <div class='site-header' role='banner'>
+      <h1>
+        <%= config.title %>
+      </h1>
       <p>
-        <a
-          class="push-button"
-          href="http://github.com/rstacruz/cheatsheets/issues/907"
-          >Request cheatsheet</a
-        >
+        <%= config.subtitle %>
       </p>
+ <div class='pages-list' role='main'>
+    <% site.categories.each(function(category,i){ %>
+        <h2 class='category item' id='ruby' data-js-searchable-header>
+          <span><%= category.name %></span>
+        </h2>
+  
+        <% category.posts.each(function(post,j){ %>
+            <a 
+            href="<%- url_for(post.path) %>"
+            class ="article item -item-fitness/phat"
+            >
+            <span class='info'>
+              <code class='slug'><%= post.slug %></code>
+              <span class='title'><%= post.title %></span>
+            </span>
+          </a>
+          <% }) %>
+          <% }) %>
+ </div>
     </div>
   </div>
-</div>
-
-<div class="announcements-list">
-  <div
-    class="announcements-item item -hide"
-    data-js-dismissable='{"id":"2017-10-26-twitter"}'
-  >
-    <h3 class="title">New: We're on Twitter ♥️</h3>
-    <div class="body">
-      <p>
-        Follow <a href="https://twitter.com/devhints">@devhints</a> on Twitter
-        for daily “today I learned” snippets!
-      </p>
-
-      <p>
-        <a href="https://twitter.com/devhints"
-          ><img
-            src="https://img.shields.io/twitter/follow/devhints.svg?style=social&amp;label=@devhints"
-            alt=""
-        /></a>
-      </p>
-    </div>
-    <button data-js-dismiss class="close"></button>
-  </div>
-</div>
-
-<!-- critical js -->
-<script>
-  !(function(e) {
-    function n(r) {
-      if (t[r]) return t[r].exports;
-      var o = (t[r] = { i: r, l: !1, exports: {} });
-      return e[r].call(o.exports, o, o.exports, n), (o.l = !0), o.exports;
-    }
-    var t = {};
-    (n.m = e),
-      (n.c = t),
-      (n.d = function(e, t, r) {
-        n.o(e, t) ||
-          Object.defineProperty(e, t, {
-            configurable: !1,
-            enumerable: !0,
-            get: r
-          });
-      }),
-      (n.n = function(e) {
-        var t =
-          e && e.__esModule
-            ? function() {
-                return e.default;
-              }
-            : function() {
-                return e;
-              };
-        return n.d(t, "a", t), t;
-      }),
-      (n.o = function(e, n) {
-        return Object.prototype.hasOwnProperty.call(e, n);
-      }),
-      (n.p = ""),
-      n((n.s = 2));
-  })([
-    function(e, n) {
-      function t(e, n) {
-        var t =
-          e.matches ||
-          e.matchesSelector ||
-          e.msMatchesSelector ||
-          e.mozMatchesSelector ||
-          e.webkitMatchesSelector ||
-          e.oMatchesSelector;
-        if (t) return t.call(e, n);
-        if (e.parentNode) {
-          for (var r = e.parentNode.querySelectorAll(n), o = r.length; o--; 0)
-            if (r[o] === e) return !0;
-          return !1;
-        }
-      }
-      e.exports = t;
-    },
-    function(e, n, t) {
-      function r(e, n) {
-        if (n) {
-          if (Array.isArray(n))
-            return void o(n, function(n) {
-              r(e, n);
-            });
-          if (e.classList) {
-            var t = n.split(" ").filter(Boolean);
-            o(t, function(n) {
-              e.classList.add(n);
-            });
-          } else e.className += " " + n;
-        }
-      }
-      var o = t(4);
-      e.exports = r;
-    },
-    function(e, n, t) {
-      "use strict";
-      function r(e) {
-        return e && e.__esModule ? e : { default: e };
-      }
-      function o() {
-        d || ((0, c.default)(document.documentElement, "LoadDone"), (d = !0));
-      }
-      var i = t(3),
-        u = r(i),
-        a = t(1),
-        c = r(a),
-        f = t(6),
-        l = r(f),
-        s = document.querySelector("[data-js-main-body]");
-      s && ((0, u.default)(s), (0, c.default)(s, "-wrapified")),
-        (0, l.default)(window, "load", o),
-        setTimeout(o, 5e3);
-      var d = void 0;
-    },
-    function(e, n, t) {
-      "use strict";
-      function r(e) {
-        return e && e.__esModule ? e : { default: e };
-      }
-      function o(e) {
-        if (Array.isArray(e)) {
-          for (var n = 0, t = Array(e.length); n < e.length; n++) t[n] = e[n];
-          return t;
-        }
-        return Array.from(e);
-      }
-      function i(e) {
-        u(e).forEach(function(e) {
-          (0, p.findChildren)(e, "[data-js-h3-section-list]").forEach(function(
-            e
-          ) {
-            a(e);
-          });
-        });
-      }
-      function u(e) {
-        return c(e, {
-          tag: "h2",
-          wrapperFn: function() {
-            return (0, p.createDiv)({ class: "h2-section" });
-          },
-          bodyFn: function() {
-            return (0, p.createDiv)({
-              class: "body h3-section-list",
-              "data-js-h3-section-list": ""
-            });
-          }
-        });
-      }
-      function a(e) {
-        return c(e, {
-          tag: "h3",
-          wrapperFn: function() {
-            return (0, p.createDiv)({ class: "h3-section" });
-          },
-          bodyFn: function() {
-            return (0, p.createDiv)({ class: "body" });
-          }
-        });
-      }
-      function c(e, n) {
-        function t(e, n, t) {
-          var r = i(),
-            o = e.className;
-          o && (0, d.default)(r, o), (0, p.before)(e, r);
-          var a = u();
-          return (
-            o && (0, d.default)(a, o),
-            (0, p.appendMany)(a, t),
-            n && r.appendChild(n),
-            r.appendChild(a),
-            r
-          );
-        }
-        var r = n.tag,
-          i = n.wrapperFn,
-          u = n.bodyFn,
-          a = e.children[0],
-          c = [];
-        if (a && !(0, l.default)(a, r)) {
-          var f = (0, p.nextUntil)(a, r);
-          c.push(t(a, null, [a].concat(o(f))));
-        }
-        return (
-          (0, p.findChildren)(e, r).forEach(function(e) {
-            var n = (0, p.nextUntil)(e, r);
-            c.push(t(e, e, n));
-          }),
-          c
-        );
-      }
-      Object.defineProperty(n, "__esModule", { value: !0 }),
-        (n.default = i),
-        (n.groupify = c);
-      var f = t(0),
-        l = r(f),
-        s = t(1),
-        d = r(s),
-        p = t(5);
-    },
-    function(e, n) {
-      function t(e, n) {
-        var t,
-          r,
-          o = e.length;
-        if ("number" == typeof o) for (t = 0; t < o; t++) n(e[t], t);
-        else {
-          r = 0;
-          for (t in e) e.hasOwnProperty(t) && n(e[t], t, r++);
-        }
-        return e;
-      }
-      e.exports = t;
-    },
-    function(e, n, t) {
-      "use strict";
-      function r(e) {
-        if (Array.isArray(e)) {
-          for (var n = 0, t = Array(e.length); n < e.length; n++) t[n] = e[n];
-          return t;
-        }
-        return Array.from(e);
-      }
-      function o(e, n) {
-        n.forEach(function(n) {
-          e.appendChild(n);
-        });
-      }
-      function i(e, n) {
-        return u(e.nextSibling, n, []);
-      }
-      function u(e, n, t) {
-        return e
-          ? (0, s.default)(e, n)
-            ? t
-            : u(e.nextSibling, n, [].concat(r(t), [e]))
-          : t;
-      }
-      function a(e, n) {
-        e.parentNode.insertBefore(n, e);
-      }
-      function c(e, n) {
-        return [].slice.call(e.children).filter(function(e) {
-          return (0, s.default)(e, n);
-        });
-      }
-      function f(e) {
-        var n = document.createElement("div");
-        return (
-          Object.keys(e).forEach(function(t) {
-            n.setAttribute(t, e[t]);
-          }),
-          n
-        );
-      }
-      Object.defineProperty(n, "__esModule", { value: !0 }),
-        (n.appendMany = o),
-        (n.nextUntil = i),
-        (n.before = a),
-        (n.findChildren = c),
-        (n.createDiv = f);
-      var l = t(0),
-        s = (function(e) {
-          return e && e.__esModule ? e : { default: e };
-        })(l);
-    },
-    function(e, n) {
-      function t(e, n, t) {
-        e.addEventListener
-          ? e.addEventListener(n, t)
-          : e.attachEvent("on" + n, function() {
-              t.call(e);
-            });
-      }
-      e.exports = t;
-    }
-  ]);
-</script>
-<script src="./assets/packed/vendor.js?t=20191029195040"></script>
-<script src="./assets/packed/app.js?t=20191029195040"></script>
