--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -34,10 +34,8 @@
   <% } %>
   <%- css('css/style') %> -->
 
-  <%- css("assets/2017/style.css") %>
-  <%- js(["assets/packed/app.js","assets/packed/vendor.js"]) %>
-
-
+  <%- css("assets/2017/style.css",) %>
+  
 
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
