--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -14,5 +14,6 @@
     <!-- <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %> -->
     <!-- <%- partial('_partial/after-footer') %> -->
   </div>
+  <%- js(["assets/packed/vendor.js","assets/packed/app.js","assets/packed/script-glaze.js"]) %>
 </body>
 </html>
