--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,6 @@
 <%- partial('_partial/head') %>
 <body>
+    <%- partial('_partial/top-nav', null, {cache: !config.relative_link}) %>
   <div id="container">
     <div id="wrap">
       <!-- <%- partial('_partial/header', null, {cache: !config.relative_link}) %> -->
@@ -9,11 +10,10 @@
           <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
         <% } %> -->
       </div>
-      <!-- <%- partial('_partial/footer', null, {cache: !config.relative_link}) %> -->
     </div>                
     <!-- <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %> -->
     <!-- <%- partial('_partial/after-footer') %> -->
   </div>
-  <%- js(["assets/packed/vendor.js","assets/packed/app.js","assets/packed/script-glaze.js"]) %>
+  <%- js(["assets/packed/vendor.js","assets/packed/app.js"]) %>
 </body>
 </html>
