--- a/source/assets/2017/style.css
+++ b/source/assets/2017/style.css
@@ -531,7 +531,7 @@ ul.-also-see.-also-see.-also-see > li > em { font-size: 11px; display: block; }
 .main-heading { margin: 0; padding: 0; margin-bottom: 24px; margin-top: 64px; position: relative; }
 @media (max-width: 768px) { .main-heading { margin-bottom: 8px; margin-top: 32px; } }
 @media (max-width: 480px) { .main-heading { margin-bottom: 8px; margin-top: 32px; } }
-.main-heading { margin-top: 0; margin-bottom: 0; }
+.main-heading { margin-top: 0; }
 .main-heading > h1 { font-size: 40px; line-height: 1.2; font-weight: 200; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; margin: 0; }
 @media (min-width: 480px) and (max-width: 768px) { .main-heading > h1 { font-size: calc( 40px + 6 * ( ( 100vw - 480px) / 288 ) ); } }
 @media (min-width: 768px) and (max-width: 1280px) { .main-heading > h1 { font-size: calc( 46px + 3 * ( ( 100vw - 768px) / 512 ) ); } }
