top-nav.ejs: fix github button

--- a/layout/_partial/top-nav.ejs
+++ b/layout/_partial/top-nav.ejs
@@ -6,8 +6,8 @@
 
       <div class='actions'>
           <ul class='page-actions'>
-            <li class='link github -button hint--bottom' data-hint='<%= config.github %>'>
-              <a href='<%= config.github %>'>
+            <li class='link github -button hint--bottom' data-hint='<%= theme.github %>'>
+              <a href='<%= theme.github %>'>
                 <span class='text -visible'></span>
               </a>
             </li>
