article.ejs: load css, js resources

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -21,4 +21,9 @@
   </div>
 </section>
 <% } %>
-<%- js(["assets/packed/vendor.js","assets/packed/app.js","assets/packed/script-glaze.js"]) %>
+
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.17.1/prism.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
+<%- js(["js/article.js"]) %>
+
+
