head.ejs: add tab icon

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -22,7 +22,9 @@
   }
   %>
   <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-  
+  <% if (theme.favicon){ %>
+    <link rel="icon" href="<%- theme.favicon %>">
+  <% } %>
   <%- css("css/style",) %>
 
 </head>
