_config,top-nav: change github icon text

--- a/layout/_partial/top-nav.ejs
+++ b/layout/_partial/top-nav.ejs
@@ -6,9 +6,9 @@
 
       <div class='actions'>
           <ul class='page-actions'>
-            <li class='link github -button hint--bottom' data-hint='<%= theme.github %>'>
+            <li class='link github -button hint--bottom' data-hint='<%= theme.githubToolTip %>'>
               <a href='<%= theme.github %>'>
-                <span class='text -visible'></span>
+                <span class='text -visible'><%= theme.githubToolTip %></span>
               </a>
             </li>
           </ul>
