perf(main.css): minimize and purge css

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -25,6 +25,6 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <%- css("css/style",) %>
+  <%- css("css/bundle","css/main") %>
 
 </head>
