--- a/source/css/bundle.css
+++ b/source/css/bundle.css
@@ -84,18 +84,28 @@
 /******/ 	return __webpack_require__(__webpack_require__.s = 0);
 /******/ })
 /************************************************************************/
-/******/ ([
-/* 0 */
+/******/ ({
+
+/***/ "./source/sass/2017/style.scss":
+/*!*************************************!*\
+  !*** ./source/sass/2017/style.scss ***!
+  \*************************************/
+/*! no static exports found */
 /***/ (function(module, exports, __webpack_require__) {
 
-module.exports = __webpack_require__(1);
-
+eval("// extracted by mini-css-extract-plugin\n\n//# sourceURL=webpack:///./source/sass/2017/style.scss?");
 
 /***/ }),
-/* 1 */
+
+/***/ 0:
+/*!*******************************************!*\
+  !*** multi ./source/sass/2017/style.scss ***!
+  \*******************************************/
+/*! no static exports found */
 /***/ (function(module, exports, __webpack_require__) {
 
-// extracted by mini-css-extract-plugin
+eval("module.exports = __webpack_require__(/*! ./source/sass/2017/style.scss */\"./source/sass/2017/style.scss\");\n\n\n//# sourceURL=webpack:///multi_./source/sass/2017/style.scss?");
 
 /***/ })
-/******/ ]);
+
+/******/ });
