--- a/source/css/main.css
+++ b/source/css/main.css
@@ -555,7 +555,7 @@ textarea,
  */
 html, body {
   background: #f1f3f5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
   font-size: 14px;
   line-height: 1.6;
   color: #345;
@@ -579,11 +579,11 @@ body {
  * Code
  */
 pre, code {
-  font-family: cousine, "SFMono-Regular", Consolas, Menlo, "Liberation Mono", "Ubuntu Mono", Courier, monospace;
+  font-family: cousine, "Sarasa Mono T SC", "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
   letter-spacing: -0.03em; }
 
 pre {
-  font-size: 0.96em; }
+  font-size: 1em; }
 
 /*
  * Antialias
@@ -638,16 +638,23 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
  * For links with sources, eg,
  * [Foo](foo.com) _(foo.com)_
  */
-.MarkdownBody.MarkdownBody a + em {
-  opacity: 0.5; }
+.MarkdownBody.MarkdownBody a {
+  word-wrap: break-word; }
+  .MarkdownBody.MarkdownBody a + em {
+    opacity: 0.5; }
+
+.MarkdownBody h2 code, .MarkdownBody h3 code, .MarkdownBody p code, .MarkdownBody ol code, .MarkdownBody ul code {
+  padding: 0 4px;
+  color: #e53935; }
 
 .MarkdownBody code {
   color: #667788;
-  font-size: 0.96em; }
+  font-size: 1em; }
 
 .MarkdownBody pre,
 .MarkdownBody code {
-  font-family: cousine, "SFMono-Regular", Consolas, Menlo, "Liberation Mono", "Ubuntu Mono", Courier, monospace; }
+  font-family: cousine, "Sarasa Mono T SC", "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
+  word-break: break-word; }
 
 .MarkdownBody pre.-box-chars {
   line-height: 1.32; }
@@ -665,30 +672,25 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   overflow: hidden;
   overflow-x: auto;
   background: white;
-  font-size: 0.96em;
+  font-size: 1em;
   line-height: 1.5; }
-
-.MarkdownBody pre.-wrap {
-  white-space: pre-wrap; }
-
-.MarkdownBody pre > code {
-  color: #111;
-  max-height: auto;
-  padding: 0;
-  background: transparent;
-  overflow: visible;
-  font-size: 1em; }
+  .MarkdownBody pre.-wrap {
+    white-space: pre-wrap; }
+  .MarkdownBody pre > code {
+    color: #111;
+    max-height: auto;
+    padding: 0;
+    background: transparent;
+    overflow: visible;
+    font-size: 1em; }
 
 .MarkdownBody .line-highlight {
   transform: translate3d(0, 2px, 0);
   background: linear-gradient(to right, rgba(20, 175, 131, 0.05) 25%, transparent); }
-
-.MarkdownBody .line-highlight[data-end] {
-  margin-top: 0; }
-
-.MarkdownBody .line-highlight::before,
-.MarkdownBody .line-highlight::after {
-  display: none; }
+  .MarkdownBody .line-highlight[data-end] {
+    margin-top: 0; }
+  .MarkdownBody .line-highlight::before, .MarkdownBody .line-highlight::after {
+    display: none; }
 
 .MarkdownBody pre.-setup,
 .MarkdownBody p.-setup,
@@ -726,7 +728,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   font-size: 30px;
   line-height: 1.2;
   font-weight: 200;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
   margin-top: 0; }
   @media (max-width: 768px) {
     .MarkdownBody h2 {
@@ -752,7 +754,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   margin: 0;
   padding: 0;
   margin-bottom: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
   font-size: 17px;
   font-weight: 400;
   color: #745fb5; }
@@ -860,7 +862,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   .MarkdownBody table tr + tr {
     border-top: solid 1px rgba(102, 119, 136, 0.05); }
   .MarkdownBody table tbody + tbody {
-    border-top: solid 1px rgba(102, 119, 136, 0.2); }
+    border-top: solid 1px rgba(102, 119, 136, 0.25); }
   .MarkdownBody table td,
   .MarkdownBody table th {
     padding: 8px 16px;
@@ -872,7 +874,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   .MarkdownBody table td:first-child {
     white-space: nowrap; }
   .MarkdownBody table td > code {
-    font-size: 0.96em; }
+    font-size: 1em; }
   .MarkdownBody table td:first-child > code {
     color: #35a; }
   .MarkdownBody table a,
@@ -925,7 +927,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 
 .MarkdownBody table.-headers thead {
   display: table-header-group;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.2); }
+  border-bottom: solid 1px rgba(102, 119, 136, 0.25); }
 
 /*
  * Key-value pairs (like in css)
@@ -1185,7 +1187,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 .comments-area > .container::before {
   content: '';
   display: block;
-  background: linear-gradient(to right, rgba(102, 119, 136, 0.2) 50%, transparent);
+  background: linear-gradient(to right, rgba(102, 119, 136, 0.25) 50%, transparent);
   height: 1px; }
 
 /*
@@ -1275,6 +1277,18 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
     opacity: 0; }
   .h2-section:hover > .anchor {
     opacity: 1; }
+  .h2-section > pre {
+    padding: 16px;
+    margin: 0 0 16px 0;
+    box-shadow: 0 6px 8px rgba(102, 119, 136, 0.03), 0 1px 2px rgba(102, 119, 136, 0.3);
+    /* Border radius */ }
+    @media (max-width: 480px) {
+      .h2-section > pre {
+        margin: 0 -16px;
+        box-shadow: 0 1px 1px rgba(102, 119, 136, 0.55); } }
+    @media (min-width: 481px) {
+      .h2-section > pre {
+        border-radius: 2px; } }
 
 /*
  * H3 section
@@ -1339,25 +1353,37 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
     margin: 0;
     padding: 0;
     list-style-type: none; }
-  .h3-section > .body > ul > li {
-    padding: 8px;
-    padding-left: 36px;
-    position: relative; }
-  .h3-section > .body > ul > li > p {
+    .h3-section > .body > ul > li {
+      padding: 8px;
+      padding-left: 36px;
+      position: relative; }
+      .h3-section > .body > ul > li > p {
+        margin: 0;
+        padding: 0; }
+      .h3-section > .body > ul > li::before {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        width: 4px;
+        height: 4px;
+        background: #667788;
+        border-radius: 50%;
+        left: 16px;
+        top: 18px; }
+      .h3-section > .body > ul > li + li {
+        border-top: solid 1px rgba(102, 119, 136, 0.05); }
+  .h3-section > .body > ol {
     margin: 0;
-    padding: 0; }
-  .h3-section > .body > ul > li::before {
-    content: '';
-    position: absolute;
-    display: inline-block;
-    width: 4px;
-    height: 4px;
-    background: #667788;
-    border-radius: 50%;
-    left: 16px;
-    top: 18px; }
-  .h3-section > .body > ul > li + li {
-    border-top: solid 1px rgba(102, 119, 136, 0.05); }
+    padding: 16px 16px 16px 32px; }
+    .h3-section > .body > ol > li {
+      padding: 8px;
+      padding-left: 4px;
+      position: relative; }
+      .h3-section > .body > ol > li > p {
+        margin: 0;
+        padding: 0; }
+      .h3-section > .body > ol > li + li {
+        border-top: solid 1px rgba(102, 119, 136, 0.05); }
   .h3-section > .body > p {
     padding: 16px;
     margin: 0; }
@@ -1403,7 +1429,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
     .h3-section > .body > table ~ p a:hover {
       color: #26648e; }
   .h3-section > .body > *:not(:first-child) {
-    border-top: solid 1px rgba(102, 119, 136, 0.05); }
+    border-top: solid 1px rgba(102, 119, 136, 0.25); }
   .h3-section > .body > p + p,
   .h3-section > .body > p + p:not(:first-child) {
     margin-top: -1.5em;
@@ -1427,9 +1453,9 @@ ul.-also-see.-also-see.-also-see {
   ul.-also-see.-also-see.-also-see > li {
     flex: 1 0 20%;
     padding: 24px;
-    border-top: solid 1px rgba(102, 119, 136, 0.2); }
+    border-top: solid 1px rgba(102, 119, 136, 0.25); }
     ul.-also-see.-also-see.-also-see > li + li {
-      border-left: solid 1px rgba(102, 119, 136, 0.2); }
+      border-left: solid 1px rgba(102, 119, 136, 0.25); }
   ul.-also-see.-also-see.-also-see,
   ul.-also-see.-also-see.-also-see > li {
     list-style-type: none; }
@@ -1619,7 +1645,7 @@ ul.-also-see.-also-see.-also-see {
       content: '';
       width: 32px;
       height: 1px;
-      background: rgba(102, 119, 136, 0.2);
+      background: rgba(102, 119, 136, 0.25);
       margin: 8px 146px 8px auto; } }
 
 .hint-mark {
@@ -1647,7 +1673,7 @@ ul.-also-see.-also-see.-also-see {
  */
 .home-button {
   display: inline-block;
-  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.2);
+  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.25);
   border-radius: 50%; }
 
 .home-button, .home-button:visited {
@@ -1698,7 +1724,7 @@ ul.-also-see.-also-see.-also-see {
     font-size: 40px;
     line-height: 1.2;
     font-weight: 200;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     margin: 0; }
     @media (min-width: 480px) and (max-width: 768px) {
       .main-heading > h1 {
@@ -1737,7 +1763,7 @@ ul.-also-see.-also-see.-also-see {
   margin: 32px 0;
   display: flex;
   align-items: center;
-  border-top: solid 1px rgba(102, 119, 136, 0.2);
+  border-top: solid 1px rgba(102, 119, 136, 0.25);
   padding-top: 16px; }
   @media (min-width: 769px) {
     .missing-message.missing-message {
@@ -1881,7 +1907,7 @@ ul.-also-see.-also-see.-also-see {
   top: -2px; }
 
 .page-actions > .link.-button > a {
-  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.2);
+  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.25);
   border-radius: 2px;
   padding: 0 16px;
   margin: 0 8px;
@@ -1953,7 +1979,7 @@ ul.-also-see.-also-see.-also-see {
 
 .pages-list > .category {
   font-size: 15px;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.2);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.25);
   margin: 16px 0;
   padding: 0 0 16px 0;
   font-weight: normal;
@@ -2080,7 +2106,7 @@ ul.-also-see.-also-see.-also-see {
   padding: 0;
   margin-bottom: 16px;
   padding-bottom: 16px;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.2);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.25);
   line-height: 1.2;
   font-weight: 400; }
   @media (min-width: 480px) and (max-width: 768px) {
@@ -2282,7 +2308,7 @@ ul.-also-see.-also-see.-also-see {
   align-items: center;
   cursor: text; }
   .search-box > input {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     font-size: 17px;
     padding: 16px;
     height: 64px;
@@ -2404,8 +2430,8 @@ ul.-also-see.-also-see.-also-see {
   padding-top: 16px;
   padding-bottom: 16px;
   background: #f8f9fa;
-  border-top: solid 1px rgba(102, 119, 136, 0.2);
-  border-bottom: solid 1px rgba(102, 119, 136, 0.2); }
+  border-top: solid 1px rgba(102, 119, 136, 0.25);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.25); }
   .search-footer > .container {
     padding-left: 16px;
     padding-right: 16px;
@@ -2484,7 +2510,7 @@ ul.-also-see.-also-see.-also-see {
     content: '';
     width: 32px;
     height: 1px;
-    background: rgba(102, 119, 136, 0.2);
+    background: rgba(102, 119, 136, 0.25);
     margin: 12px 0; }
   @media (max-width: 960px) {
     .SideAd {
@@ -2552,7 +2578,7 @@ ul.-also-see.-also-see.-also-see {
   .top-nav {
     height: 48px;
     padding: 8px 0;
-    border-bottom: solid 1px rgba(102, 119, 136, 0.2);
+    border-bottom: solid 1px rgba(102, 119, 136, 0.25);
     margin-bottom: 8px; } }
 
 .top-nav > .container {
