style: 💄 modify style according to devhints.io

--- a/source/sass/2017/components/h3-section.scss
+++ b/source/sass/2017/components/h3-section.scss
@@ -168,7 +168,7 @@
 
   // Line divisions
   & > *:not(:first-child) {
-    border-top: solid 1px $dark-line-color;
+    border-top: solid 1px $line-color;
   }
 
   // Collapse paragraphs together
