--- a/source/css/main.css
+++ b/source/css/main.css
@@ -583,7 +583,7 @@ pre, code {
   letter-spacing: -0.03em; }
 
 pre {
-  font-size: 1em; }
+  font-size: 0.96em; }
 
 /*
  * Antialias
@@ -645,11 +645,11 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 
 .MarkdownBody h2 code, .MarkdownBody h3 code, .MarkdownBody p code, .MarkdownBody ol code, .MarkdownBody ul code {
   padding: 0 4px;
-  color: #e53935; }
+  color: #678; }
 
 .MarkdownBody code {
   color: #667788;
-  font-size: 1em; }
+  font-size: 0.96em; }
 
 .MarkdownBody pre,
 .MarkdownBody code {
@@ -672,7 +672,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   overflow: hidden;
   overflow-x: auto;
   background: white;
-  font-size: 1em;
+  font-size: 0.96em;
   line-height: 1.5; }
   .MarkdownBody pre.-wrap {
     white-space: pre-wrap; }
@@ -862,7 +862,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   .MarkdownBody table tr + tr {
     border-top: solid 1px rgba(102, 119, 136, 0.05); }
   .MarkdownBody table tbody + tbody {
-    border-top: solid 1px rgba(102, 119, 136, 0.25); }
+    border-top: solid 1px rgba(102, 119, 136, 0.2); }
   .MarkdownBody table td,
   .MarkdownBody table th {
     padding: 8px 16px;
@@ -874,7 +874,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
   .MarkdownBody table td:first-child {
     white-space: nowrap; }
   .MarkdownBody table td > code {
-    font-size: 1em; }
+    font-size: 0.96em; }
   .MarkdownBody table td:first-child > code {
     color: #35a; }
   .MarkdownBody table a,
@@ -927,7 +927,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 
 .MarkdownBody table.-headers thead {
   display: table-header-group;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.25); }
+  border-bottom: solid 1px rgba(102, 119, 136, 0.2); }
 
 /*
  * Key-value pairs (like in css)
@@ -1187,7 +1187,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 .comments-area > .container::before {
   content: '';
   display: block;
-  background: linear-gradient(to right, rgba(102, 119, 136, 0.25) 50%, transparent);
+  background: linear-gradient(to right, rgba(102, 119, 136, 0.2) 50%, transparent);
   height: 1px; }
 
 /*
@@ -1429,7 +1429,7 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
     .h3-section > .body > table ~ p a:hover {
       color: #26648e; }
   .h3-section > .body > *:not(:first-child) {
-    border-top: solid 1px rgba(102, 119, 136, 0.25); }
+    border-top: solid 1px rgba(102, 119, 136, 0.05); }
   .h3-section > .body > p + p,
   .h3-section > .body > p + p:not(:first-child) {
     margin-top: -1.5em;
@@ -1453,9 +1453,9 @@ ul.-also-see.-also-see.-also-see {
   ul.-also-see.-also-see.-also-see > li {
     flex: 1 0 20%;
     padding: 24px;
-    border-top: solid 1px rgba(102, 119, 136, 0.25); }
+    border-top: solid 1px rgba(102, 119, 136, 0.2); }
     ul.-also-see.-also-see.-also-see > li + li {
-      border-left: solid 1px rgba(102, 119, 136, 0.25); }
+      border-left: solid 1px rgba(102, 119, 136, 0.2); }
   ul.-also-see.-also-see.-also-see,
   ul.-also-see.-also-see.-also-see > li {
     list-style-type: none; }
@@ -1645,7 +1645,7 @@ ul.-also-see.-also-see.-also-see {
       content: '';
       width: 32px;
       height: 1px;
-      background: rgba(102, 119, 136, 0.25);
+      background: rgba(102, 119, 136, 0.2);
       margin: 8px 146px 8px auto; } }
 
 .hint-mark {
@@ -1673,7 +1673,7 @@ ul.-also-see.-also-see.-also-see {
  */
 .home-button {
   display: inline-block;
-  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.25);
+  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.2);
   border-radius: 50%; }
 
 .home-button, .home-button:visited {
@@ -1763,7 +1763,7 @@ ul.-also-see.-also-see.-also-see {
   margin: 32px 0;
   display: flex;
   align-items: center;
-  border-top: solid 1px rgba(102, 119, 136, 0.25);
+  border-top: solid 1px rgba(102, 119, 136, 0.2);
   padding-top: 16px; }
   @media (min-width: 769px) {
     .missing-message.missing-message {
@@ -1907,7 +1907,7 @@ ul.-also-see.-also-see.-also-see {
   top: -2px; }
 
 .page-actions > .link.-button > a {
-  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.25);
+  box-shadow: inset 0 0 0 1px rgba(102, 119, 136, 0.2);
   border-radius: 2px;
   padding: 0 16px;
   margin: 0 8px;
@@ -1979,7 +1979,7 @@ ul.-also-see.-also-see.-also-see {
 
 .pages-list > .category {
   font-size: 15px;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.25);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.2);
   margin: 16px 0;
   padding: 0 0 16px 0;
   font-weight: normal;
@@ -2106,7 +2106,7 @@ ul.-also-see.-also-see.-also-see {
   padding: 0;
   margin-bottom: 16px;
   padding-bottom: 16px;
-  border-bottom: solid 1px rgba(102, 119, 136, 0.25);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.2);
   line-height: 1.2;
   font-weight: 400; }
   @media (min-width: 480px) and (max-width: 768px) {
@@ -2430,8 +2430,8 @@ ul.-also-see.-also-see.-also-see {
   padding-top: 16px;
   padding-bottom: 16px;
   background: #f8f9fa;
-  border-top: solid 1px rgba(102, 119, 136, 0.25);
-  border-bottom: solid 1px rgba(102, 119, 136, 0.25); }
+  border-top: solid 1px rgba(102, 119, 136, 0.2);
+  border-bottom: solid 1px rgba(102, 119, 136, 0.2); }
   .search-footer > .container {
     padding-left: 16px;
     padding-right: 16px;
@@ -2510,7 +2510,7 @@ ul.-also-see.-also-see.-also-see {
     content: '';
     width: 32px;
     height: 1px;
-    background: rgba(102, 119, 136, 0.25);
+    background: rgba(102, 119, 136, 0.2);
     margin: 12px 0; }
   @media (max-width: 960px) {
     .SideAd {
@@ -2578,7 +2578,7 @@ ul.-also-see.-also-see.-also-see {
   .top-nav {
     height: 48px;
     padding: 8px 0;
-    border-bottom: solid 1px rgba(102, 119, 136, 0.25);
+    border-bottom: solid 1px rgba(102, 119, 136, 0.2);
     margin-bottom: 8px; } }
 
 .top-nav > .container {
